# numerical

./: CMakeLists.txt  README.md
include/numerical/: eval_tools.hpp  newton_interpolation.hpp  polynomials.hpp  procedural_spline.hpp  root_finders.hpp  runge_kutta.hpp  splines.hpp
tests/: newton_interp_tests.cpp
